opam-version: "2.0"
synopsis: "A distributed job orchestration platform in OCaml"
maintainer: "Orchestraml contributors"
authors: "Orchestraml contributors"
license: "MIT"
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
]
run-test: [["dune" "runtest" "-p" name]]
depends: [
  "ocaml" {>= "5.2"}
  "dune" {>= "3.16"}
  "uuidm"
  "ptime"
  "alcotest" {with-test}
  "qcheck" {with-test}
  "qcheck-alcotest" {with-test}
]
