opam-version: "2.0"
synopsis: "A distributed job orchestration platform in OCaml"
maintainer: "Orchestraml contributors"
authors: "Orchestraml contributors"
license: "MIT"
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
]
run-test: [["dune" "runtest" "-p" name]]
depends: [
  "ocaml" {>= "5.2"}
  "dune" {>= "3.16"}
  "uuidm"
  "ptime"
  "eio" {>= "1.3"}
  "eio_main" {>= "1.3"}
  "cohttp-eio" {>= "6.2.1"}
  "caqti" {>= "2.3.2" & < "2.4"}
  "caqti-eio" {>= "2.2.4"}
  "caqti-driver-postgresql" {>= "2.3.0"}
  "yojson" {>= "3.0.0"}
  "cmdliner" {>= "2.1.1"}
  "uri"
  "base64"
  "cstruct"
  "alcotest" {with-test}
  "qcheck" {with-test}
  "qcheck-alcotest" {with-test}
]
